--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
- *.settings/
- *target/
- *.svn/
- *.project
- *.classpath
- .DS_Store
- .idea/
- *.iml
+*.settings/
+*target/
+*.svn/
+*.project
+*.classpath
+.DS_Store
+.idea/
+.gradle/
+*.iml
