--- a/dependency.gradle
+++ b/dependency.gradle
@@ -1,15 +1,19 @@
 ext.versions = [
+        springboot: '1.4.2.RELEASE',
         spring: '4.1.5.RELEASE',
         security: '3.2.5.RELEASE',
         jackson: '2.4.3',
-        logback: '1.0.13',
-        slf4j: '1.7.5',
+        logback: '1.1.7',
+        slf4j: '1.7.21',
         httpclient: '4.3.1',
         lucene: '4.10.1',
 ]
 
 ext.libraries = [
         "servlet-api": "javax.servlet:javax.servlet-api:3.0.1",
+
+        "spring-boot-plugin": "org.springframework.boot:spring-boot-gradle-plugin:${versions.springboot}",
+        "spring-boot": "org.springframework.boot:spring-boot-starter-web:${versions.springboot}",
 
         // spring 4.x
         "spring-core": "org.springframework:spring-core:${versions.spring}",
@@ -60,5 +64,4 @@ ext.libraries = [
 
         //ASM
         "asm": "org.ow2.asm:asm:5.1"
-//    testCompile group: 'junit', name: 'junit', version: '4.11'
 ]
