--- a/springboot/build.gradle
+++ b/springboot/build.gradle
@@ -2,12 +2,21 @@ group 'com.xianyue'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'org.springframework.boot'
 
-
-sourceCompatibility = 1.5
 
 repositories {
     mavenCentral()
+}
+
+buildscript {
+    repositories {
+        mavenCentral()
+        jcenter()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.4.2.RELEASE")
+    }
 }
 
 dependencies {
