--- a/mail-sender/build.gradle
+++ b/mail-sender/build.gradle
@@ -18,5 +18,6 @@ dependencies {
             libraries.'log4j-over-slf4j',
             libraries.'slf4j-api',
             libraries.'commons-lang3',
+            libraries.'json-ali',
             )
 }
