add kafka consumer. copy from others

--- a/mail-sender/build.gradle
+++ b/mail-sender/build.gradle
@@ -19,5 +19,6 @@ dependencies {
             libraries.'slf4j-api',
             libraries.'commons-lang3',
             libraries.'json-ali',
+            libraries.'kafka',
             )
 }
