--- a/dependency.gradle
+++ b/dependency.gradle
@@ -1,85 +1,78 @@
 ext.versions = [
         springboot: '1.4.2.RELEASE',
-        spring: '4.1.5.RELEASE',
-        security: '3.2.5.RELEASE',
-        jackson: '2.4.3',
-        logback: '1.1.7',
-        slf4j: '1.7.21',
+        spring    : '4.1.5.RELEASE',
+        security  : '3.2.5.RELEASE',
+        jackson   : '2.4.3',
+        logback   : '1.1.7',
+        slf4j     : '1.7.21',
         httpclient: '4.3.1',
-        lucene: '4.10.1',
-        zookeeper: '3.4.9',
-        lombok:  '1.16.4',
-        ali_json: '1.2.7'
+        lucene    : '4.10.1',
+        zookeeper : '3.4.9',
+        lombok    : '1.16.4',
+        ali_json  : '1.2.7',
+        kafka     : '0.8.1'
 ]
 
 ext.libraries = [
-        "servlet-api": "javax.servlet:javax.servlet-api:3.0.1",
+        "servlet-api"            : "javax.servlet:javax.servlet-api:3.0.1",
 
-        "spring-boot-plugin": "org.springframework.boot:spring-boot-gradle-plugin:${versions.springboot}",
-        "spring-boot": "org.springframework.boot:spring-boot-starter-web:${versions.springboot}",
+        "spring-boot-plugin"     : "org.springframework.boot:spring-boot-gradle-plugin:${versions.springboot}",
+        "spring-boot"            : "org.springframework.boot:spring-boot-starter-web:${versions.springboot}",
 
         // spring 4.x
-        "spring-core": "org.springframework:spring-core:${versions.spring}",
-        "spring-beans": "org.springframework:spring-beans:${versions.spring}",
-        "spring-jdbc": "org.springframework:spring-jdbc:${versions.spring}",
-        "spring-tx": "org.springframework:spring-tx:${versions.spring}",
-        "spring-context": "org.springframework:spring-context:${versions.spring}",
-        "spring-context-support": "org.springframework:spring-context-support:${versions.spring}",
+        "spring-core"            : "org.springframework:spring-core:${versions.spring}",
+        "spring-beans"           : "org.springframework:spring-beans:${versions.spring}",
+        "spring-jdbc"            : "org.springframework:spring-jdbc:${versions.spring}",
+        "spring-tx"              : "org.springframework:spring-tx:${versions.spring}",
+        "spring-context"         : "org.springframework:spring-context:${versions.spring}",
+        "spring-context-support" : "org.springframework:spring-context-support:${versions.spring}",
 
-        "spring-orm": "org.springframework:spring-orm:${versions.spring}",
-        "spring-oxm": "org.springframework:spring-oxm:${versions.spring}",
-        "spring-webmvc": "org.springframework:spring-webmvc:${versions.spring}",
-        "spring-jms": "org.springframework:spring-jms:${versions.spring}",
-        "spring-aspects": "org.springframework:spring-aspects:${versions.spring}",
+        "spring-orm"             : "org.springframework:spring-orm:${versions.spring}",
+        "spring-oxm"             : "org.springframework:spring-oxm:${versions.spring}",
+        "spring-webmvc"          : "org.springframework:spring-webmvc:${versions.spring}",
+        "spring-jms"             : "org.springframework:spring-jms:${versions.spring}",
+        "spring-aspects"         : "org.springframework:spring-aspects:${versions.spring}",
 
-        "spring-websocket": "org.springframework:spring-websocket:${versions.spring}",
-        "spring-messaging": "org.springframework:spring-messaging:${versions.spring}",
-        "spring-test": "org.springframework:spring-test:${versions.spring}",
+        "spring-websocket"       : "org.springframework:spring-websocket:${versions.spring}",
+        "spring-messaging"       : "org.springframework:spring-messaging:${versions.spring}",
+        "spring-test"            : "org.springframework:spring-test:${versions.spring}",
 
         // Spring Security
-        "spring-security-core": "org.springframework.security:spring-security-core:${versions.security}",
-        "spring-security-web": "org.springframework.security:spring-security-web:${versions.security}",
-        "spring-security-config": "org.springframework.security:spring-security-config:${versions.security}",
+        "spring-security-core"   : "org.springframework.security:spring-security-core:${versions.security}",
+        "spring-security-web"    : "org.springframework.security:spring-security-web:${versions.security}",
+        "spring-security-config" : "org.springframework.security:spring-security-config:${versions.security}",
         "spring-security-taglibs": "org.springframework.security:spring-security-taglibs:${versions.security}",
 
         // 忽略common log，使用slf4j代替
-        "logback-classic": "ch.qos.logback:logback-classic:${versions.logback}",
-        "logback-core": "ch.qos.logback:logback-core:${versions.logback}",
-        "jcl-over-slf4j": "org.slf4j:jcl-over-slf4j:${versions.slf4j}",
-        "log4j-over-slf4j": "org.slf4j:log4j-over-slf4j:${versions.slf4j}",
-        "slf4j-api": "org.slf4j:slf4j-api:${versions.slf4j}",
+        "logback-classic"        : "ch.qos.logback:logback-classic:${versions.logback}",
+        "logback-core"           : "ch.qos.logback:logback-core:${versions.logback}",
+        "jcl-over-slf4j"         : "org.slf4j:jcl-over-slf4j:${versions.slf4j}",
+        "log4j-over-slf4j"       : "org.slf4j:log4j-over-slf4j:${versions.slf4j}",
+        "slf4j-api"              : "org.slf4j:slf4j-api:${versions.slf4j}",
 
         // JSON
-        "jackson-databind": "com.fasterxml.jackson.core:jackson-databind:${versions.jackson}",
-        "json-ali":"com.alibaba:fastjson:${versions.ali_json}",
+        "jackson-databind"       : "com.fasterxml.jackson.core:jackson-databind:${versions.jackson}",
+        "json-ali"               : "com.alibaba:fastjson:${versions.ali_json}",
 
         // Apache
-        "commons-dbcp": "commons-dbcp:commons-dbcp:1.4",
-        "commons-beanutils-core": "commons-beanutils:commons-beanutils-core:1.8.3",
-        "commons-configuration": "commons-configuration:commons-configuration:1.10",
-        "commons-jxpath": "commons-jxpath:commons-jxpath:1.3",
-        "commons-lang3": "org.apache.commons:commons-lang3:3.1",
-        "commons-lang": "commons-lang:commons-lang:2.6",
-        "commons-digester3": "org.apache.commons:commons-digester3:3.2",
+        "commons-dbcp"           : "commons-dbcp:commons-dbcp:1.4",
+        "commons-beanutils-core" : "commons-beanutils:commons-beanutils-core:1.8.3",
+        "commons-configuration"  : "commons-configuration:commons-configuration:1.10",
+        "commons-jxpath"         : "commons-jxpath:commons-jxpath:1.3",
+        "commons-lang3"          : "org.apache.commons:commons-lang3:3.1",
+        "commons-lang"           : "commons-lang:commons-lang:2.6",
+        "commons-digester3"      : "org.apache.commons:commons-digester3:3.2",
+        "commons-fileupload"     : "commons-fileupload:commons-fileupload:1.3",
 
-        "commons-fileupload": "commons-fileupload:commons-fileupload:1.3",
+        // Redis
+        "redisson"               : "org.redisson:redisson:2.2.16",
+        "redis"                  : "redis.clients:jedis:2.9.0",
 
-        "junit": "junit:junit:4.12",
-
-        //ASM
-        "asm": "org.ow2.asm:asm:5.1",
-
-        //jsqlParse
-        "jsql-parser": 'com.github.jsqlparser:jsqlparser:0.9.6',
-        "zookeeper":"org.apache.zookeeper:zookeeper:${versions.zookeeper}",
-
-        //lombok
-        "lombok": "org.projectlombok:lombok:${versions.lombok}",
-
-        //Redis
-        "redisson": "org.redisson:redisson:2.2.16",
-        "redis": "redis.clients:jedis:2.9.0",
-
-        //cglib
-        "cglib": "cglib:cglib:3.1",
+        "junit"                  : "junit:junit:4.12",
+        "asm"                    : "org.ow2.asm:asm:5.1",
+        "jsql-parser"            : 'com.github.jsqlparser:jsqlparser:0.9.6',
+        "zookeeper"              : "org.apache.zookeeper:zookeeper:${versions.zookeeper}",
+        "lombok"                 : "org.projectlombok:lombok:${versions.lombok}",
+        "cglib"                  : "cglib:cglib:3.1",
+        "kafka"                  : "org.apache.kafka:kafka_2.10:${versions.kafka}"
 ]
