--- a/mail-sender/build.gradle
+++ b/mail-sender/build.gradle
@@ -6,7 +6,12 @@ apply plugin: 'java'
 sourceCompatibility = 1.8
 
 repositories {
-    mavenCentral()
+    mavenLocal() //1.优先查找本地maven库，性能最好
+    maven{//2.其次查找aliyun maven库
+        url'http://maven.aliyun.com/nexus/content/groups/public/'
+        //url 'http://maven.oschina.net/content/groups/public/
+    }
+    mavenCentral()//3.最后查找maven中央库
 }
 
 dependencies {
@@ -19,6 +24,6 @@ dependencies {
             libraries.'slf4j-api',
             libraries.'commons-lang3',
             libraries.'json-ali',
-            libraries.'kafka',
-            )
+            libraries.'kafka'
+    )
 }
