--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ dependencies {
             libraries.'redis',
             libraries.'redisson',
             libraries.'cglib',
-            libraries.'json-ali',
+            libraries.'ali-json',
             libraries.'logback-classic',
             libraries.'jcl-over-slf4j',
             libraries.'log4j-over-slf4j',
