--- a/dependency.gradle
+++ b/dependency.gradle
@@ -1,31 +1,46 @@
 ext.versions = [
-        springboot: '1.4.2.RELEASE',
-        spring    : '4.1.5.RELEASE',
-        security  : '3.2.5.RELEASE',
-        jackson   : '2.4.3',
-        logback   : '1.1.7',
-        slf4j     : '1.7.21',
-        httpclient: '4.3.1',
-        lucene    : '4.10.1',
-        zookeeper : '3.4.9',
-        lombok    : '1.16.4',
-        ali_json  : '1.2.7',
-        kafka     : '0.8.2.2'
+        springboot         : '1.5.2.RELEASE',
+        spring             : '4.1.5.RELEASE',
+        security           : '3.2.5.RELEASE',
+        jackson            : '2.4.3',
+        logback            : '1.1.7',
+        slf4j              : '1.7.21',
+        httpclient         : '4.3.1',
+        lucene             : '4.10.1',
+        zookeeper          : '3.4.9',
+        lombok             : '1.16.4',
+        ali_json           : '1.2.7',
+        kafka              : '0.8.2.2',
+        powermock          : '1.6.6',
+        mockito            : '1.10.19',
+        swagger            : '2.6.1',
+        mysql_connector    : '6.0.5',
+        ali_druid          : '1.0.28',
+        mybatis            : '3.4.2',
+        mybatis_spring     : '1.3.1',
+
+        //google
+        guava              : '21.0',
+        commons_collections: '3.2.2',
+        hamcrest           : '1.3'
 ]
 
-ext.libraries = [
-        "servlet-api"            : "javax.servlet:javax.servlet-api:3.0.1",
+//compile group: 'commons-collections', name: 'commons-collections', version: '3.2.2'
 
-        "spring-boot-plugin"     : "org.springframework.boot:spring-boot-gradle-plugin:${versions.springboot}",
-        "spring-boot"            : "org.springframework.boot:spring-boot-starter-web:${versions.springboot}",
+ext.libraries = [
+        "servlet-api"           : "javax.servlet:javax.servlet-api:3.0.1",
+
+        "spring-boot-plugin"    : "org.springframework.boot:spring-boot-gradle-plugin:${versions.springboot}",
+        "spring-boot"           : "org.springframework.boot:spring-boot-starter-web:${versions.springboot}",
+        "spring-boot-jdbc"      : "org.springframework.boot:spring-boot-starter-jdbc:${versions.springboot}",
 
         // spring 4.x
-        "spring-core"            : "org.springframework:spring-core:${versions.spring}",
-        "spring-beans"           : "org.springframework:spring-beans:${versions.spring}",
-        "spring-jdbc"            : "org.springframework:spring-jdbc:${versions.spring}",
-        "spring-tx"              : "org.springframework:spring-tx:${versions.spring}",
-        "spring-context"         : "org.springframework:spring-context:${versions.spring}",
-        "spring-context-support" : "org.springframework:spring-context-support:${versions.spring}",
+        "spring-core"           : "org.springframework:spring-core:${versions.spring}",
+        "spring-beans"          : "org.springframework:spring-beans:${versions.spring}",
+        "spring-jdbc"           : "org.springframework:spring-jdbc:${versions.spring}",
+        "spring-tx"             : "org.springframework:spring-tx:${versions.spring}",
+        "spring-context"        : "org.springframework:spring-context:${versions.spring}",
+        "spring-context-support": "org.springframework:spring-context-support:${versions.spring}",
 
         "spring-orm"             : "org.springframework:spring-orm:${versions.spring}",
         "spring-oxm"             : "org.springframework:spring-oxm:${versions.spring}",
@@ -44,35 +59,57 @@ ext.libraries = [
         "spring-security-taglibs": "org.springframework.security:spring-security-taglibs:${versions.security}",
 
         // 忽略common log，使用slf4j代替
-        "logback-classic"        : "ch.qos.logback:logback-classic:${versions.logback}",
-        "logback-core"           : "ch.qos.logback:logback-core:${versions.logback}",
-        "jcl-over-slf4j"         : "org.slf4j:jcl-over-slf4j:${versions.slf4j}",
-        "log4j-over-slf4j"       : "org.slf4j:log4j-over-slf4j:${versions.slf4j}",
-        "slf4j-api"              : "org.slf4j:slf4j-api:${versions.slf4j}",
+        "logback-classic"       : "ch.qos.logback:logback-classic:${versions.logback}",
+        "logback-core"          : "ch.qos.logback:logback-core:${versions.logback}",
+        "jcl-over-slf4j"        : "org.slf4j:jcl-over-slf4j:${versions.slf4j}",
+        "log4j-over-slf4j"      : "org.slf4j:log4j-over-slf4j:${versions.slf4j}",
+        "slf4j-api"             : "org.slf4j:slf4j-api:${versions.slf4j}",
 
         // JSON
-        "jackson-databind"       : "com.fasterxml.jackson.core:jackson-databind:${versions.jackson}",
-        "json-ali"               : "com.alibaba:fastjson:${versions.ali_json}",
+        "jackson-databind"      : "com.fasterxml.jackson.core:jackson-databind:${versions.jackson}",
+        "ali-json"              : "com.alibaba:fastjson:${versions.ali_json}",
 
         // Apache
-        "commons-dbcp"           : "commons-dbcp:commons-dbcp:1.4",
-        "commons-beanutils-core" : "commons-beanutils:commons-beanutils-core:1.8.3",
-        "commons-configuration"  : "commons-configuration:commons-configuration:1.10",
-        "commons-jxpath"         : "commons-jxpath:commons-jxpath:1.3",
-        "commons-lang3"          : "org.apache.commons:commons-lang3:3.1",
-        "commons-lang"           : "commons-lang:commons-lang:2.6",
-        "commons-digester3"      : "org.apache.commons:commons-digester3:3.2",
-        "commons-fileupload"     : "commons-fileupload:commons-fileupload:1.3",
+        "commons-dbcp"          : "commons-dbcp:commons-dbcp:1.4",
+        "commons-beanutils-core": "commons-beanutils:commons-beanutils-core:1.8.3",
+        "commons-configuration" : "commons-configuration:commons-configuration:1.10",
+        "commons-jxpath"        : "commons-jxpath:commons-jxpath:1.3",
+        "commons-lang3"         : "org.apache.commons:commons-lang3:3.1",
+        "commons-collections"   : "commons-collections:commons-collections:${versions.commons_collections}",
+        "commons-lang"          : "commons-lang:commons-lang:2.6",
+        "commons-digester3"     : "org.apache.commons:commons-digester3:3.2",
+        "commons-fileupload"    : "commons-fileupload:commons-fileupload:1.3",
+        "commons-io"            : "commons-io:commons-io:2.5",
+        "guava"                 : "com.google.guava:guava:${versions.guava}",
+
 
         // Redis
-        "redisson"               : "org.redisson:redisson:2.2.16",
-        "redis"                  : "redis.clients:jedis:2.9.0",
+        "redisson"              : "org.redisson:redisson:2.2.16",
+        "redis"                 : "redis.clients:jedis:2.9.0",
 
-        "junit"                  : "junit:junit:4.12",
-        "asm"                    : "org.ow2.asm:asm:5.1",
-        "jsql-parser"            : 'com.github.jsqlparser:jsqlparser:0.9.6',
-        "zookeeper"              : "org.apache.zookeeper:zookeeper:${versions.zookeeper}",
-        "lombok"                 : "org.projectlombok:lombok:${versions.lombok}",
-        "cglib"                  : "cglib:cglib:3.1",
-        "kafka"                  : "org.apache.kafka:kafka_2.9.2:${versions.kafka}"
+        "asm"                   : "org.ow2.asm:asm:5.1",
+        "jsql-parser"           : 'com.github.jsqlparser:jsqlparser:0.9.6',
+        "zookeeper"             : "org.apache.zookeeper:zookeeper:${versions.zookeeper}",
+        "lombok"                : "org.projectlombok:lombok:${versions.lombok}",
+        "cglib"                 : "cglib:cglib:3.1",
+        "kafka"                 : "org.apache.kafka:kafka_2.9.2:${versions.kafka}",
+        "powermock"             : "org.powermock:powermock-module-junit4:${versions.powermock}",
+        "powermock-api"         : "org.powermock:powermock-api-mockito:${versions.powermock}",
+        "mockito"               : "org.mockito:mockito-all:${versions.mockito}",
+
+        //swagger  文档api生成工具
+        "swagger"               : "io.springfox:springfox-swagger2:${versions.swagger}",
+        "swagger-ui"            : "io.springfox:springfox-swagger-ui:${versions.swagger}",
+
+        //mybatis
+        "mysql-connector"       : "mysql:mysql-connector-java:${versions.mysql_connector}",
+        "ali-druid"             : "com.alibaba:druid:${versions.ali_druid}",
+        "mybatis"               : "org.mybatis:mybatis:${versions.mybatis}",
+        "mybatis-spring"        : "org.mybatis:mybatis-spring:${versions.mybatis_spring}",
+
+        //test
+        "junit"                 : "junit:junit:4.12",
+        "hamcrest"              : "org.hamcrest:hamcrest-all:${versions.hamcrest}",
+        "hamcrest-library"      : "org.hamcrest:hamcrest-library:${versions.hamcrest}",
+        "hamcrest-core"         : "org.hamcrest:hamcrest-core:${versions.hamcrest}"
 ]
