--- a/practice/build.gradle
+++ b/practice/build.gradle
@@ -2,6 +2,7 @@ group 'com.xianyue'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'idea'
 
 sourceCompatibility = 1.8
 /**targetCompatibility = 1.8**/
@@ -15,11 +16,19 @@ repositories {
 }
 
 dependencies {
-    testCompile(libraries.'junit')
+    testCompile(
+            libraries.'junit',
+            libraries.'hamcrest-library',
+            libraries.'hamcrest-core',
+            libraries.'mockito',
+            libraries.'powermock',
+            libraries.'powermock-api',
+    )
+
     compile(
             libraries.'jsql-parser',
             libraries.'commons-lang3',
-            libraries.'json-ali',
+            libraries.'ali-json',
             libraries.'logback-classic',
             libraries.'jcl-over-slf4j',
             libraries.'log4j-over-slf4j',
@@ -27,6 +36,9 @@ dependencies {
             libraries.'redis',
             libraries.'redisson',
             libraries.'cglib',
+            libraries.'guava',
+            libraries.'commons-collections',
+
     )
 
 }
