--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,6 @@ include 'practice'
 include 'springboot'
 include 'distributed'
 include 'mail-sender'
+include 'designpattern'
+include 'retrofit'
 
