--- a/build.gradle
+++ b/build.gradle
@@ -6,12 +6,17 @@ apply plugin: 'idea'
 apply plugin: 'eclipse'
 
 apply from: 'dependency.gradle'
+apply from: 'plugin.gradle'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 repositories {
-    mavenCentral()
+    mavenLocal() //1.优先查找本地maven库，性能最好
+    maven{//2.其次查找aliyun maven库
+        url'http://maven.aliyun.com/nexus/content/groups/public/'
+    }
+    mavenCentral()//3.最后查找maven中央库
 }
 
 
