--- a/dependency.gradle
+++ b/dependency.gradle
@@ -22,7 +22,9 @@ ext.versions = [
         //google
         guava              : '21.0',
         commons_collections: '3.2.2',
-        hamcrest           : '1.3'
+        hamcrest           : '1.3',
+
+        retrofit2          : "2.1.0"
 ]
 
 //compile group: 'commons-collections', name: 'commons-collections', version: '3.2.2'
@@ -33,6 +35,7 @@ ext.libraries = [
         "spring-boot-plugin"    : "org.springframework.boot:spring-boot-gradle-plugin:${versions.springboot}",
         "spring-boot"           : "org.springframework.boot:spring-boot-starter-web:${versions.springboot}",
         "spring-boot-jdbc"      : "org.springframework.boot:spring-boot-starter-jdbc:${versions.springboot}",
+        "spring-boot-mail"      : "org.springframework.boot:spring-boot-starter-mail:${versions.springboot}",
 
         // spring 4.x
         "spring-core"           : "org.springframework:spring-core:${versions.spring}",
@@ -93,22 +96,26 @@ ext.libraries = [
         "lombok"                : "org.projectlombok:lombok:${versions.lombok}",
         "cglib"                 : "cglib:cglib:3.1",
         "kafka"                 : "org.apache.kafka:kafka_2.9.2:${versions.kafka}",
-        "powermock"             : "org.powermock:powermock-module-junit4:${versions.powermock}",
-        "powermock-api"         : "org.powermock:powermock-api-mockito:${versions.powermock}",
-        "mockito"               : "org.mockito:mockito-all:${versions.mockito}",
 
         //swagger  文档api生成工具
         "swagger"               : "io.springfox:springfox-swagger2:${versions.swagger}",
         "swagger-ui"            : "io.springfox:springfox-swagger-ui:${versions.swagger}",
 
-        //mybatis
+        //database
         "mysql-connector"       : "mysql:mysql-connector-java:${versions.mysql_connector}",
         "ali-druid"             : "com.alibaba:druid:${versions.ali_druid}",
         "mybatis"               : "org.mybatis:mybatis:${versions.mybatis}",
         "mybatis-spring"        : "org.mybatis:mybatis-spring:${versions.mybatis_spring}",
 
+        //retrofit+okhttp
+        "retrofit2"             : "com.squareup.retrofit2:retrofit:${versions.retrofit2}",
+        "retrofit2-convert-json": "com.squareup.retrofit2:converter-jackson:${versions.retrofit2}",
+
         //test
         "junit"                 : "junit:junit:4.12",
+        "powermock"             : "org.powermock:powermock-module-junit4:${versions.powermock}",
+        "powermock-api"         : "org.powermock:powermock-api-mockito:${versions.powermock}",
+        "mockito"               : "org.mockito:mockito-all:${versions.mockito}",
         "hamcrest"              : "org.hamcrest:hamcrest-all:${versions.hamcrest}",
         "hamcrest-library"      : "org.hamcrest:hamcrest-library:${versions.hamcrest}",
         "hamcrest-core"         : "org.hamcrest:hamcrest-core:${versions.hamcrest}"
