--- a/mail-sender/build.gradle
+++ b/mail-sender/build.gradle
@@ -2,8 +2,12 @@ group 'com.xianyue'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'idea'
+
+apply from: '../plugin.gradle'
 
 sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
     mavenLocal() //1.优先查找本地maven库，性能最好
