--- a/springboot/src/main/resources/application.properties
+++ b/springboot/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+#active profile
+spring.profiles.active=dev
 
 server.port=50001
 ### user info
@@ -10,6 +12,8 @@ redis.cache.clusterNodes=localhost:6379
 redis.cache.commandTimeout=5
 #unit:second
 redis.cache.expireSeconds=120
+
+
 #jdbc
 jdbc.driverClassName=com.mysql.jdbc.Driver
 #在xml配置文件中，url中的&符号需要转义成&。比如在tomcat的server.xml中配置数据库连接池时，mysql jdbc url样例如下：
@@ -21,3 +25,15 @@ mybatis.typeAliasesPackage=com.xianyue.springboot.domain
 #指定Mapper.xml位置
 mybatis.mapperLocations=classpath:mapper/*.xml
 
+
+
+#mail
+spring.mail.host=smtp.exmail.qq.com
+spring.mail.username=liuhongjun@oneapm.com
+spring.mail.password=lhj9127@oneapm
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connecttimeout=5000
+spring.mail.properties.mail.smtp.timeout=3000
+spring.mail.properties.mail.smtp.writetimeout=5000
