--- a/dependency.gradle
+++ b/dependency.gradle
@@ -9,7 +9,7 @@ ext.versions = [
         lucene             : '4.10.1',
         zookeeper          : '3.4.9',
         lombok             : '1.16.4',
-        ali_json           : '1.2.7',
+        ali_json           : '1.2.28',
         kafka              : '0.8.2.2',
         powermock          : '1.6.6',
         mockito            : '1.10.19',
@@ -36,6 +36,7 @@ ext.libraries = [
         "spring-boot"           : "org.springframework.boot:spring-boot-starter-web:${versions.springboot}",
         "spring-boot-jdbc"      : "org.springframework.boot:spring-boot-starter-jdbc:${versions.springboot}",
         "spring-boot-mail"      : "org.springframework.boot:spring-boot-starter-mail:${versions.springboot}",
+        "spring-boot-test"      : "org.springframework.boot:spring-boot-starter-test:${versions.springboot}",
 
         // spring 4.x
         "spring-core"           : "org.springframework:spring-core:${versions.spring}",
