--- a/springboot/build.gradle
+++ b/springboot/build.gradle
@@ -5,6 +5,9 @@ apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 
 
+apply from: 'dependency.gradle'
+
+
 repositories {
     mavenCentral()
 }
@@ -22,9 +25,9 @@ buildscript {
         }
         mavenCentral()
         jcenter()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.4.2.RELEASE")
+        dependencies {
+            classpath("org.springframework.boot:spring-boot-gradle-plugin:1.4.2.RELEASE")
+        }
     }
 }
 
