--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,5 @@
 rootProject.name = 'javapiers'
-include 'instrument'
+include 'jvmlearn'
 include 'filescanner'
 include 'practice'
 include 'distributed'
