--- a/springboot/dependency.gradle
+++ b/springboot/dependency.gradle
@@ -42,7 +42,7 @@ ext.libraries = [
         "servlet-api"            : "javax.servlet:javax.servlet-api:3.0.1",
 
         "spring-boot-plugin"     : "org.springframework.boot:spring-boot-gradle-plugin:${versions.springboot}",
-        "spring-boot"            : "org.springframework.boot:spring-boot-starter-web:${versions.springboot}",
+        "spring-boot-web"        : "org.springframework.boot:spring-boot-starter-web:${versions.springboot}",
         "spring-boot-jdbc"       : "org.springframework.boot:spring-boot-starter-jdbc:${versions.springboot}",
         "spring-boot-mail"       : "org.springframework.boot:spring-boot-starter-mail:${versions.springboot}",
         "spring-boot-test"       : "org.springframework.boot:spring-boot-starter-test:${versions.springboot}",
