add singleton desgin pattern

--- a/designpattern/build.gradle
+++ b/designpattern/build.gradle
@@ -24,5 +24,6 @@ dependencies {
             libraries.'slf4j-api',
             libraries.'cglib',
             libraries.'asm',
+            libraries.'lombok'
     )
 }
