class innitial demo

--- a/filescanner/build.gradle
+++ b/filescanner/build.gradle
@@ -22,5 +22,6 @@ dependencies {
             libraries.'logback-classic',
             libraries.'jcl-over-slf4j',
             libraries.'log4j-over-slf4j',
+            libraries.'slf4j-api',
     )
 }
