--- a/dependency.gradle
+++ b/dependency.gradle
@@ -24,7 +24,7 @@ ext.versions = [
         junit              : '4.12',
 
         //util
-        guava              : '21.0',
+        guava              : '22.0',
         commons_collections: '3.2.2',
         swagger            : '2.6.1',
         lombok             : '1.16.4',
@@ -32,32 +32,33 @@ ext.versions = [
         zookeeper          : '3.4.9',
         kafka              : '0.8.2.2',
 
-        retrofit2          : "2.1.0",
+        retrofit2          : "2.3.0",
+        okhttp             : '3.8.0',
         httpclient         : '4.3.1'
 ]
 
 //compile group: 'commons-collections', name: 'commons-collections', version: '3.2.2'
 
 ext.libraries = [
-        "servlet-api"            : "javax.servlet:javax.servlet-api:3.0.1",
+        "servlet-api"           : "javax.servlet:javax.servlet-api:3.0.1",
 
-        "spring-boot-plugin"     : "org.springframework.boot:spring-boot-gradle-plugin:${versions.springboot}",
-        "spring-boot"            : "org.springframework.boot:spring-boot-starter-web:${versions.springboot}",
-        "spring-boot-jdbc"       : "org.springframework.boot:spring-boot-starter-jdbc:${versions.springboot}",
-        "spring-boot-mail"       : "org.springframework.boot:spring-boot-starter-mail:${versions.springboot}",
-        "spring-boot-test"       : "org.springframework.boot:spring-boot-starter-test:${versions.springboot}",
+        "spring-boot-plugin"    : "org.springframework.boot:spring-boot-gradle-plugin:${versions.springboot}",
+        "spring-boot"           : "org.springframework.boot:spring-boot-starter-web:${versions.springboot}",
+        "spring-boot-jdbc"      : "org.springframework.boot:spring-boot-starter-jdbc:${versions.springboot}",
+        "spring-boot-mail"      : "org.springframework.boot:spring-boot-starter-mail:${versions.springboot}",
+        "spring-boot-test"      : "org.springframework.boot:spring-boot-starter-test:${versions.springboot}",
 
         // spring 4.x
-        "spring-core"            : "org.springframework:spring-core:${versions.spring}",
-        "spring-beans"           : "org.springframework:spring-beans:${versions.spring}",
-        "spring-jdbc"            : "org.springframework:spring-jdbc:${versions.spring}",
-        "spring-tx"              : "org.springframework:spring-tx:${versions.spring}",
-        "spring-context"         : "org.springframework:spring-context:${versions.spring}",
-        "spring-context-support" : "org.springframework:spring-context-support:${versions.spring}",
+        "spring-core"           : "org.springframework:spring-core:${versions.spring}",
+        "spring-beans"          : "org.springframework:spring-beans:${versions.spring}",
+        "spring-jdbc"           : "org.springframework:spring-jdbc:${versions.spring}",
+        "spring-tx"             : "org.springframework:spring-tx:${versions.spring}",
+        "spring-context"        : "org.springframework:spring-context:${versions.spring}",
+        "spring-context-support": "org.springframework:spring-context-support:${versions.spring}",
 
-        "spring-orm"             : "org.springframework:spring-orm:${versions.spring}",
-        "spring-oxm"             : "org.springframework:spring-oxm:${versions.spring}",
-        "spring-webmvc"          : "org.springframework:spring-webmvc:${versions.spring}",
+        "spring-orm"            : "org.springframework:spring-orm:${versions.spring}",
+        "spring-oxm"            : "org.springframework:spring-oxm:${versions.spring}",
+        "spring-webmvc"         : "org.springframework:spring-webmvc:${versions.spring}",
         "spring-jms"             : "org.springframework:spring-jms:${versions.spring}",
         "spring-aspects"         : "org.springframework:spring-aspects:${versions.spring}",
 
@@ -92,41 +93,42 @@ ext.libraries = [
         "commons-collections"    : "commons-collections:commons-collections:${versions.commons_collections}",
         "commons-lang"           : "commons-lang:commons-lang:2.6",
         "commons-digester3"      : "org.apache.commons:commons-digester3:3.2",
-        "commons-fileupload"     : "commons-fileupload:commons-fileupload:1.3",
-        "commons-io"             : "commons-io:commons-io:2.5",
-        "guava"                  : "com.google.guava:guava:${versions.guava}",
+        "commons-fileupload"    : "commons-fileupload:commons-fileupload:1.3",
+        "commons-io"            : "commons-io:commons-io:2.5",
+        "guava"                 : "com.google.guava:guava:${versions.guava}",
 
         // Redis
-        "redisson"               : "org.redisson:redisson:2.2.16",
-        "redis"                  : "redis.clients:jedis:2.9.0",
+        "redisson"              : "org.redisson:redisson:2.2.16",
+        "redis"                 : "redis.clients:jedis:2.9.0",
 
-        "asm"                    : "org.ow2.asm:asm:5.1",
-        "jsql-parser"            : 'com.github.jsqlparser:jsqlparser:0.9.6',
-        "zookeeper"              : "org.apache.zookeeper:zookeeper:${versions.zookeeper}",
-        "lombok"                 : "org.projectlombok:lombok:${versions.lombok}",
-        "cglib"                  : "cglib:cglib:3.1",
-        "kafka"                  : "org.apache.kafka:kafka_2.9.2:${versions.kafka}",
+        "asm"                   : "org.ow2.asm:asm:5.1",
+        "jsql-parser"           : 'com.github.jsqlparser:jsqlparser:0.9.6',
+        "zookeeper"             : "org.apache.zookeeper:zookeeper:${versions.zookeeper}",
+        "lombok"                : "org.projectlombok:lombok:${versions.lombok}",
+        "cglib"                 : "cglib:cglib:3.1",
+        "kafka"                 : "org.apache.kafka:kafka_2.9.2:${versions.kafka}",
 
         //swagger  文档api生成工具
-        "swagger"                : "io.springfox:springfox-swagger2:${versions.swagger}",
-        "swagger-ui"             : "io.springfox:springfox-swagger-ui:${versions.swagger}",
+        "swagger"               : "io.springfox:springfox-swagger2:${versions.swagger}",
+        "swagger-ui"            : "io.springfox:springfox-swagger-ui:${versions.swagger}",
 
         //database
-        "mysql-connector"        : "mysql:mysql-connector-java:${versions.mysql_connector}",
-        "ali-druid"              : "com.alibaba:druid:${versions.ali_druid}",
-        "mybatis"                : "org.mybatis:mybatis:${versions.mybatis}",
-        "mybatis-spring"         : "org.mybatis:mybatis-spring:${versions.mybatis_spring}",
+        "mysql-connector"       : "mysql:mysql-connector-java:${versions.mysql_connector}",
+        "ali-druid"             : "com.alibaba:druid:${versions.ali_druid}",
+        "mybatis"               : "org.mybatis:mybatis:${versions.mybatis}",
+        "mybatis-spring"        : "org.mybatis:mybatis-spring:${versions.mybatis_spring}",
 
         //retrofit+okhttp
-        "retrofit2"              : "com.squareup.retrofit2:retrofit:${versions.retrofit2}",
-        "retrofit2-convert-json" : "com.squareup.retrofit2:converter-jackson:${versions.retrofit2}",
+        "retrofit2"             : "com.squareup.retrofit2:retrofit:${versions.retrofit2}",
+        "retrofit2-convert-json": "com.squareup.retrofit2:converter-jackson:${versions.retrofit2}",
+        "okhttp"                : "com.squareup.okhttp3:okhttp:3.8.1",
 
         //test
-        "junit"                  : "junit:junit:${versions.junit}",
-        "powermock"              : "org.powermock:powermock-module-junit4:${versions.powermock}",
-        "powermock-api"          : "org.powermock:powermock-api-mockito:${versions.powermock}",
-        "mockito"                : "org.mockito:mockito-all:${versions.mockito}",
-        "hamcrest"               : "org.hamcrest:hamcrest-all:${versions.hamcrest}",
-        "hamcrest-library"       : "org.hamcrest:hamcrest-library:${versions.hamcrest}",
-        "hamcrest-core"          : "org.hamcrest:hamcrest-core:${versions.hamcrest}"
+        "junit"                 : "junit:junit:${versions.junit}",
+        "powermock"             : "org.powermock:powermock-module-junit4:${versions.powermock}",
+        "powermock-api"         : "org.powermock:powermock-api-mockito:${versions.powermock}",
+        "mockito"               : "org.mockito:mockito-all:${versions.mockito}",
+        "hamcrest"              : "org.hamcrest:hamcrest-all:${versions.hamcrest}",
+        "hamcrest-library"      : "org.hamcrest:hamcrest-library:${versions.hamcrest}",
+        "hamcrest-core"         : "org.hamcrest:hamcrest-core:${versions.hamcrest}"
 ]
