--- a/practice/build.gradle
+++ b/practice/build.gradle
@@ -14,6 +14,11 @@ repositories {
     maven{//2.其次查找aliyun maven库
         url'http://maven.aliyun.com/nexus/content/groups/public/'
     }
+    maven {
+        url("https://plugins.gradle.org/m2/")
+    }
+//    maven {url 'http://maven.oschina.net/content/groups/public/'}
+//    jcenter()
     mavenCentral()//3.最后查找maven中央库
 }
 
@@ -41,6 +46,9 @@ dependencies {
             libraries.'guava',
             libraries.'commons-collections',
             libraries.'lombok',
+            libraries.'retrofit2',
+            libraries.'okhttp',
+            libraries.'retrofit2-convert-json',
     )
 }
 
