--- a/designpattern/build.gradle
+++ b/designpattern/build.gradle
@@ -1,29 +1,4 @@
-group 'com.xianyue'
-version '1.0-SNAPSHOT'
-
-apply plugin: 'java'
-apply plugin: 'idea'
-
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
-repositories {
-    mavenLocal() //1.优先查找本地maven库，性能最好
-    maven {//2.其次查找aliyun maven库
-        url 'http://maven.aliyun.com/nexus/content/groups/public/'
-    }
-    mavenCentral()//3.最后查找maven中央库
-}
-
 dependencies {
-    testCompile(libraries.'junit')
-    compile(
-            libraries.'logback-classic',
-            libraries.'jcl-over-slf4j',
-            libraries.'log4j-over-slf4j',
-            libraries.'slf4j-api',
-            libraries.'cglib',
-            libraries.'asm',
-            libraries.'lombok'
-    )
+    compile "cglib:cglib:${Cglib_Version}"
+    compile "org.ow2.asm:asm:${Asm_Version}"
 }
