--- a/jvmlearn/build.gradle
+++ b/jvmlearn/build.gradle
@@ -1,14 +1,7 @@
-group 'com.xianyue'
-version '1.0-SNAPSHOT'
-
-apply plugin: 'java'
-
-sourceCompatibility = 1.5
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.github.jvmlearn.util.Machine'
+        attributes 'Premain-Class': 'com.github.jvmlearn.agent.StartAgent'
+        attributes 'Can-Refefine-Class': true
+    }
 }
