--- a/mail-sender/build.gradle
+++ b/mail-sender/build.gradle
@@ -1,33 +1,4 @@
-group 'com.xianyue'
-version '1.0-SNAPSHOT'
-
-apply plugin: 'java'
-apply plugin: 'idea'
-
-apply from: '../plugin.gradle'
-
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
-repositories {
-    mavenLocal() //1.优先查找本地maven库，性能最好
-    maven{//2.其次查找aliyun maven库
-        url'http://maven.aliyun.com/nexus/content/groups/public/'
-        //url 'http://maven.oschina.net/content/groups/public/
-    }
-    mavenCentral()//3.最后查找maven中央库
-}
-
 dependencies {
-    testCompile(libraries.'junit')
-    compile(
-            libraries.'lombok',
-            libraries.'logback-classic',
-            libraries.'jcl-over-slf4j',
-            libraries.'log4j-over-slf4j',
-            libraries.'slf4j-api',
-            libraries.'commons-lang3',
-            libraries.'ali-json',
-            libraries.'kafka'
-    )
+    compile "org.apache.kafka:kafka_2.11:${Kafka_Version}"
+    compile "org.apache.kafka:kafka-clients:${Kafka_Version}"
 }
