--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,3 @@
-// 不能放在allprojects 模块内，会造成plugin with id spring-boot not found in parent build.gradle
 buildscript {
     repositories {
         mavenLocal() //1.优先查找本地maven库，性能最好
@@ -10,8 +9,9 @@ buildscript {
         jcenter()
         dependencies {
             classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.2.RELEASE")
-            classpath 'me.champeau.gradle:jmh-gradle-plugin:0.3.1'
-            classpath 'com.github.erizo.gradle:jcstress-gradle-plugin:0.8.0'
+            classpath 'me.champeau.gradle:jmh-gradle-plugin:0.5.0'
+            classpath 'com.github.erizo.gradle:jcstress-gradle-plugin:0.8.1'
+            classpath 'com.github.jengelman.gradle.plugins:shadow:5.2.0'
         }
     }
 }
@@ -44,14 +44,8 @@ allprojects { subproj ->
         }
         mavenCentral()//3.最后查找maven中央库
     }
-
-    task createJavaProject << {
-        sourceSets*.java.srcDirs*.each { it.mkdirs() }
-        sourceSets*.resources.srcDirs*.each { it.mkdirs() }
-    }
 }
 subprojects { subproj ->
-    apply plugin: 'application' // 可以运行、安装应用程序并用非“fat jar”方式创建二进制发布版本。
     group = "com.xianyue.${githubProjectName}"
     version '1.0-SNAPSHOT'
 
@@ -72,22 +66,10 @@ subprojects { subproj ->
         testCompile "org.hamcrest:hamcrest-library:${Hamcrest_Version}"
 
         compile "org.projectlombok:lombok:${Lombok_Version}"
-        compile "com.google.guava:guava:${Guava_Version}"
-        compile "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:${Jackson_Version}"
-        compile "com.fasterxml.jackson.core:jackson-databind:${Jackson_Version}"
-        compile "org.apache.commons:commons-lang3:${Common_Lang_Version}"
-        compile "cglib:cglib:${Cglib_Version}"
-        compile "com.alibaba:fastjson:${Alibaba_Json_Version}"
-
-        compile "ch.qos.logback:logback-classic:${Logback_Version}"
-        compile "ch.qos.logback:logback-core:${Logback_Version}"
-        compile "org.slf4j:jcl-over-slf4j:${Slf4j_Version}"
-        compile "org.slf4j:log4j-over-slf4j:${Slf4j_Version}"
-        compile "org.slf4j:slf4j-api:${Slf4j_Version}"
 
 
-        jmh "org.openjdk.jmh:jmh-core:1.18"
-        jmh "org.openjdk.jmh:jmh-generator-annprocess:1.18"
+//        jmh "org.openjdk.jmh:jmh-core:1.18"
+//        jmh "org.openjdk.jmh:jmh-generator-annprocess:1.18"
 
     }
 
