--- a/plugin.gradle
+++ b/plugin.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'jacoco'
 apply plugin: 'me.champeau.gradle.jmh'
-apply plugin: 'jcstress'
+apply plugin: "com.github.erizo.gradle.jcstress"
 
 jacoco {
     toolVersion = "0.7.6.201602180812"
@@ -11,7 +11,6 @@ jacocoTestReport {
     reports {
         xml.enabled false
         csv.enabled false
-        html.destination "${buildDir}/jacocoHtml"
     }
 }
 
