--- a/practice/build.gradle
+++ b/practice/build.gradle
@@ -1,4 +1,16 @@
 dependencies {
+    compile "com.google.guava:guava:${Guava_Version}"
+    compile "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:${Jackson_Version}"
+    compile "com.fasterxml.jackson.core:jackson-databind:${Jackson_Version}"
+    compile "org.apache.commons:commons-lang3:${Common_Lang_Version}"
+    compile "cglib:cglib:${Cglib_Version}"
+    compile "com.alibaba:fastjson:${Alibaba_Json_Version}"
+
+    compile "ch.qos.logback:logback-classic:${Logback_Version}"
+    compile "ch.qos.logback:logback-core:${Logback_Version}"
+    compile "org.slf4j:jcl-over-slf4j:${Slf4j_Version}"
+    compile "org.slf4j:log4j-over-slf4j:${Slf4j_Version}"
+    compile "org.slf4j:slf4j-api:${Slf4j_Version}"
     compile "com.squareup.retrofit2:retrofit:${Retrofit2_Version}"
     compile "com.squareup.retrofit2:converter-jackson:${Retrofit2_Version}"
     compile "org.apache.commons:commons-collections4:${Common_Collection_Version}"
